[package]
name = "neptune-auth"
version = "0.1.0"
authors = [
    "Eric Woolsey<eric@cryptech.dev>",
    "Francisco Inacio<cisco@cryptech.dev>",
    "Cryptech Developments Ltd."
]
edition = "2021"
description = "Crate for implementing message authorization for cosmwasm smart contracts."
homepage = "https://nept.finance"
keywords = ["cosmwasm", "smart-contracts", "cosmos", "authorization"]
license = "Apache-2.0"
repository = "https://github.com/cryptechdev/neptune-auth"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1"
thiserror = "1"
